# juliuscaesar

./: .gitignore  CHANGELOG.md  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  install.sh  pyproject.toml
.github/: CODEOWNERS
docs/: ARCHITECTURE.md  GATEWAY.md  MIGRATION-0.2-to-0.3.md  accountabilities.md  adaptive-discovery.md  entities.md  inter-agent-protocol.md  jc-command-catalog.md
docs/examples/: corporate-gateway-email.yaml
docs/kb/: INDEX.md  LOG.md  kb-config.yaml
docs/reports/: agent-brain-structure.html  agent-brain-structure.md  repricing-corporate-readiness.md
docs/research/: persona-system.md
docs/runbooks/: email-operations.md  self-model-go-live.md
docs/self_model/: FROZEN_SECTIONS_REFERENCE.md
docs/specs/: accountabilities.md  adaptive-discovery.md  agent-persona-fill.md  agent-self-discovery.md  asr-whisper-fallback.md  autonomous-user-model.md  claude-warm-pool.md  codex-auth-extractor.md  codex-main-brain-hardening.md  commitments-and-reengage.md  company-inbox-channel.md  context-aware-session-lifecycle.md  (+72 more)
lib/: jc_paths.py  persona_macros.py
scripts/: import_telegram_export.py  sync_l1_rules.py  sync_persona_template.py
tests/: conftest.py  test_chats.py  test_claude_adapter_worker_mode.py  test_gateway.py  test_gateway_env_isolation_integration.py  test_gateway_orphan_reap.py  test_gateway_pidfile.py  test_jc_chats_cli.py  test_jc_paths.py  test_send_telegram.py  test_send_telegram_precedence.py  test_supervisor_actions_background.py  test_supervisor_actions_phase3.py  test_supervisor_actions_stop.py  test_workers_env.py
(+585 files in other folders)
